--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<h2>Andrey Domaratskiy</h2>
 				<h3 class="aside_title">Contacts</h3>
 				<div>
-					<div><span>Phone:</span><a href="tel:+7 777 777 77 77">+3 8099 501 4122</a></div>	
+					<div class='phoneCont'><span>Phone:</span><a href="tel:+380995014122">+3 8099 501 4122</a></div>	
 					<div><span>Email:</span><a href="mailto:chornyiav@gmail.com">domaratskiy1990@gmail.com</a></div>
 				</div>					
 			</div>
