--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
 				<h2>Andrey Domaratskiy</h2>
 				<div class="i_amText">
 					<p>
-						Освободи свой мозг, стань бестелесным, бесформенным — как вода.
-						Представь, что наливаешь воду в чашку — она стала чашкой,
-						нальешь ее в чайник — она станет чайником.
-						Вода может течь, может стелиться, может капать или разбиваться — будь водой, мой друг. 	
+						Здраствуйте, вы зашли на сайт-портфолио Front-end-Developer Андрея Домарацкого, где вы можете увидеть список моих работ.
+						Если вам нужно сверстать сайт или натянуть существующий шаблон сайта на CMS Wordpres в сроки и за разумную цену то вы можете связаться со мной для детализации и обсуждения реализации...Спасибо за внимание!  
 					</p>
 				</div>	
 			</section>
