--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 				<div>
 					<div class='phoneCont'><span>Phone:</span><a href="tel:+380995014122">+3 8099 501 4122</a></div>	
 					<div><span>Email:</span><a href="mailto:chornyiav@gmail.com">domaratskiy1990@gmail.com</a></div>
+					<div><span>Link:</span><a href="https://www.facebook.com/andrey.domaratskiy/">Facebook</a></div>
 				</div>					
 			</div>
 			<div class="aside_tech">
@@ -61,7 +62,7 @@
 				<div class="i_amText">
 					<p>
 						Здраствуйте, вы зашли на сайт-портфолио Front-end-Developer Андрея Домарацкого, где вы можете увидеть список моих работ.
-						Если вам нужно сверстать сайт или натянуть существующий шаблон сайта на CMS Wordpres в сроки и за разумную цену то вы можете связаться со мной для детализации и обсуждения реализации...Спасибо за внимание!  
+						Если вам нужно сверстать сайт или натянуть существующий шаблон сайта на CMS Wordpres, в сроки и за разумную цену, то вы можете связаться со мной для детализации и обсуждения реализации...Спасибо за внимание!  
 					</p>
 				</div>	
 			</section>
