--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 				<h3 class="aside_title">Contacts</h3>
 				<div>
 					<div class='phoneCont'><span>Phone:</span><a href="tel:+380995014122">+3 8099 501 4122</a></div>	
-					<div><span>Email:</span><a href="mailto:chornyiav@gmail.com">domaratskiy1990@gmail.com</a></div>
-					<div><span>Link:</span><a href="https://www.facebook.com/andrey.domaratskiy/">Facebook</a></div>
+					<div class='phoneCont'><span>Email:</span><a href="mailto:chornyiav@gmail.com">domaratskiy1990@gmail.com</a></div>
+					<div class='phoneCont'><span>Link:</span><a href="https://www.facebook.com/andrey.domaratskiy/">Facebook</a></div>
 				</div>					
 			</div>
 			<div class="aside_tech">
